--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "ngx-bootstrap": "^2.0.5",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.1",
